fix(alignment): added left-alignment for all components that should not inherit center-alignment

--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -148,6 +148,7 @@ body {
   font-weight: 500;
   font-size: 14px;
   line-height: 24px;
+  text-align: left;
   padding-right: 8px;
   max-width: 80%;
 }
@@ -248,6 +249,7 @@ body {
   letter-spacing: unset;
   text-transform: unset;
   color: inherit;
+  text-align: left;
 }
 
 @media (max-width: 767px) {
@@ -520,6 +522,7 @@ body {
   background: #fff;
   flex-direction: row;
   min-width: 270px;
+  text-align: left;
   position: relative;
 }
 
@@ -1073,6 +1076,7 @@ body {
   border-radius: 4px;
   box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.06);
   z-index: 1;
+  text-align: left;
 }
 
 .e-autocomplete__item, .e-dropdown__item {
@@ -2425,6 +2429,7 @@ input:focus {
   box-sizing: border-box;
   padding: 40px;
   position: relative;
+  text-align: left;
 }
 
 @media (max-width: 1023px) {
@@ -2724,6 +2729,7 @@ input:focus {
   margin: 0;
   width: 100%;
   border-bottom: 1px solid #e9e9e9;
+  text-align: left;
 }
 
 .e-divider.e-divider--inverted {
@@ -2785,6 +2791,7 @@ input:focus {
   max-width: 448px;
   width: 100%;
   position: relative;
+  text-align: left;
 }
 
 .e-input > input,
@@ -5956,6 +5963,7 @@ input:focus {
   margin-block-start: 0;
   margin-block-end: 0;
   margin: 0;
+  text-align: left;
   box-sizing: border-box;
 }
 
@@ -6039,6 +6047,7 @@ input:focus {
   right: 0;
   bottom: 0;
   left: 0;
+  text-align: left;
   background: rgba(0, 0, 0, 0.25);
   z-index: 99999;
   pointer-events: auto;
@@ -7337,29 +7346,6 @@ input:focus {
   font-size: 15px;
 }
 
-.e-tags {
-  position: relative;
-  margin-top: 8px;
-  box-sizing: border-box;
-}
-
-.e-tags_item {
-  display: inline-flex;
-  align-items: center;
-  justify-content: space-between;
-  min-width: 45px;
-  margin-left: 16px;
-  padding: 10px;
-  border-radius: 4px;
-  background: #29d305;
-  color: #000;
-  letter-spacing: 0.15px;
-}
-
-.e-tags_item:first-child {
-  margin-left: 0;
-}
-
 .e-tooltip {
   position: relative;
   display: inline-block;
@@ -7549,6 +7535,7 @@ input:focus {
   width: fit-content;
   box-sizing: border-box;
   cursor: pointer;
+  text-align: left;
 }
 
 @media screen and (-ms-high-contrast: none) {
@@ -8227,6 +8214,7 @@ input:focus {
   width: fit-content;
   position: relative;
   line-height: 24px;
+  text-align: left;
   cursor: pointer;
 }
 
