--- a/packages/elvis/src/components/form/radiobutton.scss
+++ b/packages/elvis/src/components/form/radiobutton.scss
@@ -19,6 +19,7 @@ $form-radiobutton-mark-border: 1px solid colors.color('elvia-off');
   width: fit-content;
   position: relative;
   line-height: 24px;
+  text-align: left;
   cursor: pointer;
 
   &:not(:last-child) {
